// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Session Snapshots > should match snapshot for __internal_toSnapshot method 1`] = `
{
  "abandon_at": 1735689600000,
  "actor": null,
  "created_at": 1735689500000,
  "expire_at": 1735776000000,
  "factor_verification_age": null,
  "id": "sess_snapshot",
  "last_active_at": 1735689600000,
  "last_active_organization_id": "org_snapshot",
  "last_active_token": {
    "id": "",
    "jwt": "eyJhbGciOiJSUzI1NiIsImtpZCI6Imluc18yVDlwUkZST0NnYlJPRW1DbDNlX1ZYOEVfMVJSZWJUQ3JfQWZlWXciLCJ0eXAiOiJKV1QifQ.eyJhenAiOiJodHRwczovL2NsZXJrLmV4YW1wbGUuY29tIiwiZXhwIjoxNzM1Njg5NzAwLCJpYXQiOjE3MzU2ODk2MDAsImlzcyI6Imh0dHBzOi8vY2xlcmsuZXhhbXBsZS5jb20iLCJuYmYiOjE3MzU2ODk1OTAsInN1YiI6InVzZXJfMTIzIn0.signature",
    "object": "token",
  },
  "object": "session",
  "public_user_data": {
    "first_name": "Snapshot",
    "has_image": true,
    "identifier": "snapshotuser",
    "image_url": "https://example.com/snapshot-avatar.jpg",
    "last_name": "User",
    "user_id": "user_snapshot",
  },
  "status": "active",
  "tasks": null,
  "updated_at": 1735689600000,
  "user": {
    "backup_code_enabled": true,
    "create_organization_enabled": true,
    "create_organizations_limit": null,
    "created_at": 1735689400000,
    "delete_self_enabled": true,
    "email_addresses": [],
    "enterprise_accounts": [],
    "external_accounts": [],
    "external_id": null,
    "first_name": "Snapshot",
    "has_image": true,
    "id": "user_snapshot",
    "image_url": "https://example.com/snapshot-avatar.jpg",
    "last_name": "User",
    "last_sign_in_at": 1735689600000,
    "legal_accepted_at": 1735689400000,
    "object": "user",
    "organization_memberships": [],
    "passkeys": [],
    "password_enabled": true,
    "phone_numbers": [],
    "primary_email_address_id": "email_snapshot",
    "primary_phone_number_id": null,
    "primary_web3_wallet_id": null,
    "public_metadata": {
      "role": "admin",
    },
    "saml_accounts": [],
    "totp_enabled": true,
    "two_factor_enabled": true,
    "unsafe_metadata": {},
    "updated_at": 1735689500000,
    "username": "snapshotuser",
    "web3_wallets": [],
  },
}
`;

exports[`Session Snapshots > should match snapshot for session instance structure 1`] = `
{
  "createdAt": 1735689600000,
  "id": "session_123",
  "lastActiveOrganizationId": "org_123",
  "lastActiveToken": {
    "jwt": null,
    "object": undefined,
  },
  "status": "active",
  "updatedAt": 1735689700000,
  "user": {
    "firstName": "John",
    "id": "user_123",
    "lastName": "Doe",
  },
}
`;

exports[`Session Snapshots > should match snapshot for session structure 1`] = `
Session {
  "abandonAt": 2025-01-01T00:00:00.000Z,
  "actor": null,
  "attemptFirstFactorVerification": [Function],
  "attemptSecondFactorVerification": [Function],
  "checkAuthorization": [Function],
  "clearCache": [Function],
  "createdAt": 2024-12-31T23:58:20.000Z,
  "end": [Function],
  "expireAt": 2025-01-02T00:00:00.000Z,
  "factorVerificationAge": null,
  "getToken": [Function],
  "id": "sess_snapshot",
  "lastActiveAt": 2025-01-01T00:00:00.000Z,
  "lastActiveOrganizationId": "org_snapshot",
  "lastActiveToken": Token {
    "getRawString": [Function],
    "id": "",
    "jwt": {
      "claims": {
        "__raw": "eyJhbGciOiJSUzI1NiIsImtpZCI6Imluc18yVDlwUkZST0NnYlJPRW1DbDNlX1ZYOEVfMVJSZWJUQ3JfQWZlWXciLCJ0eXAiOiJKV1QifQ.eyJhenAiOiJodHRwczovL2NsZXJrLmV4YW1wbGUuY29tIiwiZXhwIjoxNzM1Njg5NzAwLCJpYXQiOjE3MzU2ODk2MDAsImlzcyI6Imh0dHBzOi8vY2xlcmsuZXhhbXBsZS5jb20iLCJuYmYiOjE3MzU2ODk1OTAsInN1YiI6InVzZXJfMTIzIn0.signature",
        "azp": "https://clerk.example.com",
        "exp": 1735689700,
        "iat": 1735689600,
        "iss": "https://clerk.example.com",
        "nbf": 1735689590,
        "sub": "user_123",
      },
      "encoded": {
        "header": "eyJhbGciOiJSUzI1NiIsImtpZCI6Imluc18yVDlwUkZST0NnYlJPRW1DbDNlX1ZYOEVfMVJSZWJUQ3JfQWZlWXciLCJ0eXAiOiJKV1QifQ",
        "payload": "eyJhenAiOiJodHRwczovL2NsZXJrLmV4YW1wbGUuY29tIiwiZXhwIjoxNzM1Njg5NzAwLCJpYXQiOjE3MzU2ODk2MDAsImlzcyI6Imh0dHBzOi8vY2xlcmsuZXhhbXBsZS5jb20iLCJuYmYiOjE3MzU2ODk1OTAsInN1YiI6InVzZXJfMTIzIn0",
        "signature": "signature",
      },
      "header": {
        "alg": "RS256",
        "kid": "ins_2T9pRFROCgbROEmCl3e_VX8E_1RRebTCr_AfeYw",
        "typ": "JWT",
      },
    },
    "pathRoot": "tokens",
  },
  "pathRoot": "/client/sessions",
  "prepareFirstFactorVerification": [Function],
  "prepareSecondFactorVerification": [Function],
  "publicUserData": PublicUserData {
    "firstName": "Snapshot",
    "hasImage": true,
    "identifier": "snapshotuser",
    "imageUrl": "https://example.com/snapshot-avatar.jpg",
    "lastName": "User",
    "userId": "user_snapshot",
  },
  "remove": [Function],
  "startVerification": [Function],
  "status": "active",
  "tasks": null,
  "touch": [Function],
  "updatedAt": 2025-01-01T00:00:00.000Z,
  "user": User {
    "addPaymentSource": [Function],
    "backupCodeEnabled": true,
    "cachedSessionsWithActivities": null,
    "createBackupCode": [Function],
    "createEmailAddress": [Function],
    "createExternalAccount": [Function],
    "createOrganizationEnabled": true,
    "createOrganizationsLimit": null,
    "createPasskey": [Function],
    "createPhoneNumber": [Function],
    "createTOTP": [Function],
    "createWeb3Wallet": [Function],
    "createdAt": 2024-12-31T23:56:40.000Z,
    "delete": [Function],
    "deleteSelfEnabled": true,
    "disableTOTP": [Function],
    "emailAddresses": [],
    "enterpriseAccounts": [],
    "externalAccounts": [],
    "externalId": null,
    "firstName": "Snapshot",
    "fullName": "Snapshot User",
    "getOrganizationInvitations": [Function],
    "getOrganizationMemberships": [Function],
    "getOrganizationSuggestions": [Function],
    "getPaymentSources": [Function],
    "getSessions": [Function],
    "hasImage": true,
    "id": "user_snapshot",
    "imageUrl": "https://example.com/snapshot-avatar.jpg",
    "initializePaymentSource": [Function],
    "isPrimaryIdentification": [Function],
    "lastName": "User",
    "lastSignInAt": 2025-01-01T00:00:00.000Z,
    "leaveOrganization": [Function],
    "legalAcceptedAt": 2024-12-31T23:56:40.000Z,
    "organizationMemberships": [],
    "passkeys": [],
    "passwordEnabled": true,
    "pathRoot": "/me",
    "phoneNumbers": [],
    "primaryEmailAddress": null,
    "primaryEmailAddressId": "email_snapshot",
    "primaryPhoneNumber": null,
    "primaryPhoneNumberId": null,
    "primaryWeb3Wallet": null,
    "primaryWeb3WalletId": null,
    "publicMetadata": {
      "role": "admin",
    },
    "removePassword": [Function],
    "samlAccounts": [],
    "setProfileImage": [Function],
    "totpEnabled": true,
    "twoFactorEnabled": true,
    "unsafeMetadata": {},
    "update": [Function],
    "updatePassword": [Function],
    "updatedAt": 2024-12-31T23:58:20.000Z,
    "username": "snapshotuser",
    "verifyTOTP": [Function],
    "web3Wallets": [],
  },
  "verifyWithPasskey": [Function],
}
`;

exports[`Session Snapshots > should match snapshot for session with no organization 1`] = `
Session {
  "actor": null,
  "attemptFirstFactorVerification": [Function],
  "attemptSecondFactorVerification": [Function],
  "checkAuthorization": [Function],
  "clearCache": [Function],
  "createdAt": 2025-01-01T00:00:00.000Z,
  "end": [Function],
  "factorVerificationAge": null,
  "getToken": [Function],
  "id": "session_456",
  "lastActiveOrganizationId": null,
  "lastActiveToken": Token {
    "getRawString": [Function],
    "pathRoot": "tokens",
  },
  "pathRoot": "/client/sessions",
  "prepareFirstFactorVerification": [Function],
  "prepareSecondFactorVerification": [Function],
  "remove": [Function],
  "startVerification": [Function],
  "status": "active",
  "tasks": null,
  "touch": [Function],
  "updatedAt": 2025-01-01T00:00:00.000Z,
  "user": User {
    "addPaymentSource": [Function],
    "backupCodeEnabled": false,
    "cachedSessionsWithActivities": null,
    "createBackupCode": [Function],
    "createEmailAddress": [Function],
    "createExternalAccount": [Function],
    "createOrganizationEnabled": false,
    "createOrganizationsLimit": null,
    "createPasskey": [Function],
    "createPhoneNumber": [Function],
    "createTOTP": [Function],
    "createWeb3Wallet": [Function],
    "createdAt": 2025-01-01T00:00:00.000Z,
    "delete": [Function],
    "deleteSelfEnabled": false,
    "disableTOTP": [Function],
    "emailAddresses": [],
    "enterpriseAccounts": [],
    "externalAccounts": [],
    "externalId": null,
    "firstName": "Jane",
    "fullName": "Jane Smith",
    "getOrganizationInvitations": [Function],
    "getOrganizationMemberships": [Function],
    "getOrganizationSuggestions": [Function],
    "getPaymentSources": [Function],
    "getSessions": [Function],
    "hasImage": false,
    "id": "user_456",
    "imageUrl": "",
    "initializePaymentSource": [Function],
    "isPrimaryIdentification": [Function],
    "lastName": "Smith",
    "lastSignInAt": null,
    "leaveOrganization": [Function],
    "legalAcceptedAt": null,
    "organizationMemberships": [],
    "passkeys": [],
    "password": "",
    "passwordEnabled": false,
    "pathRoot": "/me",
    "phoneNumbers": [],
    "primaryEmailAddress": null,
    "primaryEmailAddressId": undefined,
    "primaryPhoneNumber": null,
    "primaryPhoneNumberId": "",
    "primaryWeb3Wallet": null,
    "primaryWeb3WalletId": "",
    "profileImageId": "",
    "publicMetadata": {},
    "removePassword": [Function],
    "samlAccounts": [],
    "setProfileImage": [Function],
    "totpEnabled": false,
    "twoFactorEnabled": false,
    "unsafeMetadata": {},
    "update": [Function],
    "updatePassword": [Function],
    "updatedAt": 2025-01-01T00:00:00.000Z,
    "username": "testUsername",
    "verifyTOTP": [Function],
    "web3Wallets": [],
  },
  "verifyWithPasskey": [Function],
}
`;
